<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.View.ViewSignUp">
    <!--액션바-->
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="@dimen/elevationDP"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appbar">
        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent" android:layout_height="55dp"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:id="@+id/toolbar">
            <!--백버튼-->
            <ImageView
                    android:layout_width="40dp" android:layout_height="40dp"
                    android:src="@drawable/ic_back"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/btnBack"/>
            <!--타이틀-->
            <TextView
                    android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:textSize="@dimen/action_bar_text_size"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/signUp"
                    android:layout_gravity="center"
                    android:gravity="center"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <!--이메일 입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintBottom_toTopOf="@id/etName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/EditTextStyle"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:id="@+id/etEmail"/>
    <!--이름 입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintBottom_toTopOf="@id/etPass"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/EditTextStyle"
            android:inputType="textEmailAddress"
            android:hint="@string/name_hint"
            android:id="@+id/etName"/>
    <!--비밀번호 입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintBottom_toTopOf="@id/etPassRe"
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            tools:text="@tools:sample/cities"
            android:id="@+id/etPass"/>
    <!--비밀번호 재입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/etPass"
            android:inputType="textPassword"
            style="@style/EditTextStyle"
            android:hint="@string/password_confirm_hint"
            android:id="@+id/etPassRe"/>
    <!--약관 체크-->
    <CheckBox
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btnSignUp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="12dp"
            android:text="개인정보 수집, 이용 및 서비스 이용약관에 동의합니다."
            android:id="@+id/cbSignUp"/>
    <!--가입 버튼-->
    <Button
            android:layout_width="match_parent" android:layout_height="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/sign_up_success_button"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="@string/signUpSuccess"
            android:id="@+id/btnSignUp"/>
    <!--프로그래스-->
    <com.victor.loading.rotate.RotateLoading
            android:layout_width="@dimen/progressSize" android:layout_height="@dimen/progressSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:loading_width="@dimen/progressWidth"
            app:loading_color="@color/colorPrimary"
            android:layout_centerInParent="true"
            android:id="@+id/progress"/>
</androidx.constraintlayout.widget.ConstraintLayout>