<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.View.ViewSignIn">
    <!--액션바-->
    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etEmail"
            android:elevation="@dimen/elevationDP"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appbar">
        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent" android:layout_height="55dp"
                android:background="@color/white"
                android:elevation="0dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:id="@+id/toolbar">
            <ImageView
                    android:layout_width="40dp" android:layout_height="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_back"
                    android:id="@+id/btnBack"/>
            <TextView
                    android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/signIn"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/action_bar_text_size"
                    android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <!--이메일 입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintBottom_toTopOf="@id/etPass"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            style="@style/EditTextStyle"
            android:hint="@string/email_hint2"
            android:id="@+id/etEmail"/>
    <!--비밀번호 입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintBottom_toTopOf="@id/btnForgotPass"
            android:inputType="textPassword"
            style="@style/EditTextStyle"
            android:hint="@string/password_hint2"
            android:id="@+id/etPass"/>
    <!--비밀번호 찾기 버튼-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etPass"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/gray5"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:textSize="14dp"
            android:gravity="right"
            android:text="@string/forgotPassword"
            android:id="@+id/btnForgotPass" />
    <!--이용약관 체크박스-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btnSignIn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="20dp"
            android:textSize="14dp"
            android:gravity="center"
            android:textColor="@color/gray5"
            android:text="@string/alreadyNonSignUp"
            android:id="@+id/btnGoSignUp"/>
    <!--로그인 버튼-->
    <Button
            android:layout_width="match_parent" android:layout_height="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/sign_up_success_button"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="@string/signIn"
            android:id="@+id/btnSignIn"/>
    <!--프로그래스-->
    <com.victor.loading.rotate.RotateLoading
            android:layout_width="80dp" android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:loading_width="5dp"
            app:loading_color="@color/colorPrimary"
            android:layout_centerInParent="true"
            android:id="@+id/progress"/>
</android.support.constraint.ConstraintLayout>