<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/disable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.View.ViewLogin"><!--페북 로그인 버튼(숨김)-->
    <com.facebook.login.widget.LoginButton
            android:layout_width="match_parent" android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            style="@style/FacebookLoginButton"
            android:id="@+id/facebookSignIn"/>
    <!--비회원 시작 버튼-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btnFacebookSignIn"
            style="@style/ButtonLinearStyle"
            android:background="@drawable/sign_up_button_unauth"
            android:id="@+id/btnUnAuth">
        <ImageView
                android:layout_width="20dp" android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/ic_user"
                android:layout_margin="12dp"/>
        <TextView
                android:layout_width="0dp" android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/ButtonTextStyle"
                android:textColor="@color/black"
                android:text="@string/unAuthBtn"
                android:layout_marginEnd="32dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--페북 로그인/가입 버튼-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btnGoSignUp"
            style="@style/ButtonLinearStyle"
            android:background="@drawable/sign_up_button_facebook"
            android:id="@+id/btnFacebookSignIn">
        <ImageView
                android:layout_width="20dp" android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/com_facebook_button_icon_white"
                android:layout_margin="12dp"/>
        <TextView
                android:layout_width="0dp" android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/ButtonTextStyle"
                android:text="@string/facebookSignUpBtn"
                android:textColor="@color/white"
                android:layout_marginEnd="32dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--이메일로 가입 버튼-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btnSignIn"
            style="@style/ButtonLinearStyle"
            android:background="@drawable/sign_up_button"
            android:id="@+id/btnGoSignUp" >
        <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/ic_email"
                android:layout_margin="12dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />
        <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp" android:layout_height="match_parent"
                style="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:layout_marginEnd="32dp"
                android:text="@string/emailSignUp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--회원가입 텍스트 버튼-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/alreadySignUp"
            android:layout_marginBottom="30dp"
            android:textSize="14dp"
            android:textColor="#ffffff"
            android:id="@+id/btnSignIn"/>

    <com.victor.loading.rotate.RotateLoading
            android:layout_width="@dimen/progressSize" android:layout_height="@dimen/progressSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:loading_width="@dimen/progressWidth"
            app:loading_color="@color/colorProgress"
            android:layout_centerInParent="true"
            android:id="@+id/progress"/>
</androidx.constraintlayout.widget.ConstraintLayout>