<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.junho.app.kingcon.Login.View.ViewSetInfo">
    <!--액션바-->
    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="@dimen/elevationDP"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appbar">
        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent" android:layout_height="55dp"
                android:elevation="0dp"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:id="@+id/toolbar_rating">
            <!--백버튼-->
            <!--<ImageView-->
                    <!--android:layout_width="40dp" android:layout_height="40dp"-->
                    <!--android:src="@drawable/ic_back"-->
                    <!--android:paddingTop="10dp"-->
                    <!--android:paddingBottom="10dp"-->
                    <!--android:id="@+id/btnBack"/>-->
            <TextView
                    android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:textSize="@dimen/action_bar_text_size"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/profileImage"
                    android:layout_gravity="center"
                    android:gravity="center"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <!--프로필 작성 가이드 텍스트-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/infoText1"
            android:id="@+id/tvGuide"/>
    <!--가이드 텍스트2-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvGuide"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:text="입력한 성별과 생일은 추천제품선택에 도움이 됩니다."
            android:layout_marginTop="10dp"
            android:id="@+id/tvGuide2"/>
    <!--프로필 사진 가이드 텍스트-->
    <!--<TextView-->
    <!--android:layout_width="match_parent" android:layout_height="wrap_content"-->
    <!--app:layout_constraintTop_toBottomOf="@partition/tvGuide"-->
    <!--app:layout_constraintBottom_toTopOf="@partition/profileImg"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:text="@string/profileImage"-->
    <!--android:partition="@+partition/tvGuideProfile"/>-->
    <!--&lt;!&ndash;프로필 사진&ndash;&gt;-->
    <!--<ImageView-->
    <!--android:layout_width="80dp" android:layout_height="80dp"-->
    <!--app:layout_constraintTop_toBottomOf="@partition/tvGuideProfile"-->
    <!--app:layout_constraintBottom_toTopOf="@partition/tvGuideGender"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--android:src="@drawable/ic_user"-->
    <!--android:partition="@+partition/profileImg"/>-->
    <!--<ImageView-->
    <!--android:layout_width="20dp" android:layout_height="20dp"-->
    <!--app:layout_constraintBottom_toBottomOf="@partition/profileImg"-->
    <!--app:layout_constraintRight_toRightOf="@partition/profileImg"-->
    <!--android:layout_margin="-10dp"-->
    <!--android:src="@drawable/ic_edit"/>-->
    <!--성별 가이드-->
    <TextView
            app:layout_constraintTop_toBottomOf="@id/tvGuide2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:text="성별"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGuideGender"/>
    <RadioGroup
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvGuideGender"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/cbGroup">
        <!--성별 체크박스-->
        <RadioButton
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/female"
                android:id="@+id/cbFemale"/>
        <RadioButton
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/male"
                android:id="@+id/cbMale"/>
    </RadioGroup>
    <!--생일 가이드-->
    <TextView
            app:layout_constraintTop_toBottomOf="@id/cbGroup"
            app:layout_constraintBottom_toTopOf="@id/etBirth"
            app:layout_constraintLeft_toLeftOf="@id/tvGuideGender"
            android:layout_marginTop="20dp"
            android:text="나이"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGuideBirth"/>
    <!--생일 입력-->
    <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvGuideBirth"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:focusable="false"
            android:textSize="14dp"
            android:hint="생년월일"
            android:id="@+id/etBirth"/>
    <!--설정 완료버튼-->
    <Button
            android:layout_width="match_parent" android:layout_height="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/sign_up_success_button"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="다음"
            android:id="@+id/btnDone"/>
    <!--프로그래스-->
    <com.victor.loading.rotate.RotateLoading
            android:layout_width="80dp" android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:loading_width="5dp"
            app:loading_color="@color/colorPrimary"
            android:layout_centerInParent="true"
            android:id="@+id/progress"/>
</android.support.constraint.ConstraintLayout>
