<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.junho.app.kingcon.Login.View.ViewForgotPass">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="0dp"
            app:elevation="0dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appbar">
        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent" android:layout_height="55dp"
                android:elevation="@dimen/elevationDP"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:id="@+id/toolbar">
            <ImageView
                    android:layout_width="40dp" android:layout_height="40dp"
                    android:src="@drawable/ic_back"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/btnBack"/>
            <TextView
                    android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:textSize="@dimen/action_bar_text_size"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/passwordReset"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:id="@+id/action_bar_text"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <!--가이드 텍스트-->
    <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintBottom_toTopOf="@id/tvGuide2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="가입한 메일을 입력해 주세요"
            android:id="@+id/tvGuide1"/>
    <!--가이드 텍스트2-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvGuide1"
            app:layout_constraintBottom_toTopOf="@id/etEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:text="입력하신 메일로 비밀번호 재설정 메일을\n보내드립니다"
            android:layout_marginTop="10dp"
            android:id="@+id/tvGuide2"/>
    <!--이메일 입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/tvGuide2"
            android:layout_marginTop="20dp"
            style="@style/EditTextStyle"
            android:textSize="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint2"
            android:id="@+id/etEmail"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintBottom_toTopOf="@id/btnPassSend"
            android:id="@+id/layoutConfirm">
        <!--아이디 입력 가이드 라벨-->
        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/guid_label_text_size"
                android:textColor="@color/colorAccent"
                android:text="인증코드를 입력해 주세요."
                android:id="@+id/tvIdGuideLabel"/>
        <!--인증코드-->
        <EditText
                android:layout_width="wrap_content" android:layout_height="55dp"
                app:layout_constraintTop_toBottomOf="@id/tvIdGuideLabel"
                app:layout_constraintBottom_toTopOf="@id/etNewPw"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/EditTextStyle"
                android:textSize="15dp"
                android:inputType="textEmailAddress"
                android:gravity="left"
                android:letterSpacing="0.2"
                android:hint="000000 "
                android:maxLength="6"
                android:id="@+id/etConfirmCode"/>
        <!--새 비밀번호-->
        <EditText
                android:layout_width="match_parent" android:layout_height="55dp"
                app:layout_constraintTop_toBottomOf="@id/etConfirmCode"
                android:layout_marginTop="8dp"
                style="@style/EditTextStyle"
                android:textSize="15dp"
                android:inputType="textEmailAddress"
                android:hint="@string/password_hint"
                android:id="@+id/etNewPw"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--메일 보내기-->
    <Button
            android:layout_width="match_parent" android:layout_height="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/sign_up_success_non_button"
            android:enabled="false"
            tools:background="@drawable/sign_up_success_non_button"
            tools:enabled="false"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="재설정 메일 받기"
            android:id="@+id/btnPassSend"/>
    <!--프로그래스-->
    <com.victor.loading.rotate.RotateLoading
            android:layout_width="@dimen/progressSize" android:layout_height="@dimen/progressSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:loading_width="@dimen/progressWidth"
            app:loading_color="@color/colorPrimary"
            android:layout_centerInParent="true"
            android:id="@+id/progress"/>
</androidx.constraintlayout.widget.ConstraintLayout>
